MVP Inspector that updates automatically
